fix icon & time range display in itinerary details panel/modal_dialog, give each map an unique id based on itinerary id as preivous implementation assumes one map at a time [#70609188]; use min-width in breadcrumb item so it can grow according to item text;fix Plan page top button row displaying issue in xs mode; Review page: fix ? button displaying issue in applicable itinerary row to align with other Select buttons

--- a/app/assets/stylesheets/default/trips.css.scss
+++ b/app/assets/stylesheets/default/trips.css.scss
@@ -110,13 +110,15 @@ $breadcrumb-font-size: 16px;
 
 .breadcrumb-page {
   margin: 3px 0px;
-  width: 100px;
+  min-width: 100px;
   height: $breadcrumb-height;
   text-align: center;
+  padding: 0px 10px;
 }
 
 .current-page {
   background-image: image-url('active.png');
+  background-size: 100% 100%;
   font-weight: bold;
   font-size: $breadcrumb-font-size;
   color: white;
@@ -125,6 +127,7 @@ $breadcrumb-font-size: 16px;
 
 .prev-page {
   background-image: image-url('inactive.png');
+  background-size: 100% 100%;
 
   a{
     font-weight: bold;
@@ -141,6 +144,7 @@ $breadcrumb-font-size: 16px;
 
 .next-page {
   background-image: image-url('inactive.png');
+  background-size: 100% 100%;
   font-weight: bold;
   color: black;
   font-size: $breadcrumb-font-size;
